--- a/index.html
+++ b/index.html
@@ -676,13 +676,14 @@
 
     <div class="controlscontainer" id="controlContainer" style="position: absolute; top:831px;left:0;background-color: rgb(35,33,48); width: 1440px; height: 69px;">
 
-        <img src="/images/microphone.png" width="32" height="32" style="position: absolute; left: 18px; top: 14px;
-        cursor:pointer;">
+      <a href="#" onclick="muteSound()">
+        <img src="https://rsprz.github.io/group/images/microphone.png" width="32" height="32" style="position: absolute; left: 18px; top: 14px;
+        cursor:pointer;"></a>
       <a href="#" onclick="unload()">
-        <img src="/images/telephone.png" width="32" height="32" style="position: absolute; right: 29px; top: 20px;
+        <img src="https://rsprz.github.io/group/images/telephone.png" width="32" height="32" style="position: absolute; right: 29px; top: 20px;
         cursor:pointer;"></a>
       <a href="#" onclick="switchVideo()">
-        <img src="/images/camera.png" width="32" height="32" style="position: absolute; left: 76px; top: 15px;
+        <img src="https://rsprz.github.io/group/images/camera.png" width="32" height="32" style="position: absolute; left: 76px; top: 15px;
         cursor:pointer;"></a>
       <div id="audioOutputSelectWrapper" style="display: none; position: absolute; visibility:hidden;">
           <select id="audioOutputSelect" onchange="changeAudioOutput(this)"></select>
